# p2panda

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  RELEASE.md  deny.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: auth_group.rs  groups_2sm.rs  groups_message.rs  groups_message_dcgka.rs  header_e2e.rs
p2panda/: Cargo.toml  README.md
p2panda-auth/: Cargo.toml  README.md
p2panda-auth/examples/: groups.rs
p2panda-auth/src/: access.rs  extension.rs  graph.rs  group-crdt.rs  group_crdt.rs  lib.rs  operation.rs  validation.rs
p2panda-auth/src/group/: access.rs  action.rs  authority_graphs.rs  crdt.rs  dgm.rs  display.rs  graph.rs  group_state.rs  member.rs  message.rs  mod.rs  resolver.rs  resolver_v2.rs  state.rs  tests.rs
p2panda-blobs/: Cargo.toml  README.md
p2panda-blobs/src/: blobs.rs  config.rs  download.rs  export.rs  import.rs  lib.rs  protocol.rs
p2panda-client/: Cargo.toml
p2panda-client/src/: backend.rs  checkpoint.rs  client.rs  connector.rs  controller.rs  ephemeral.rs  lib.rs  query.rs  stream.rs  subject.rs  test_utils.rs
p2panda-core/: Cargo.toml  README.md
p2panda-core/examples/: basic.rs  extensions.rs
p2panda-core/fuzz/: Cargo.toml
p2panda-core/src/: cbor.rs  cursor.rs  extension.rs  extensions.rs  hash.rs  identity.rs  lib.rs  logs.rs  operation.rs  prune.rs  serde.rs  test_utils.rs  timestamp.rs  topic.rs  traits.rs
p2panda-derive/: Cargo.toml  test
p2panda-derive/src/: lib.rs
p2panda-derive/tests/: derive.rs
p2panda-discovery/: Cargo.toml  README.md
p2panda-discovery-next/: Cargo.toml
p2panda-discovery-next/src/: address_book.rs  hash_backup  lib.rs  naive.rs  psi_hash.rs  random_walk.rs  test_utils.rs  tests.rs  traits.rs
p2panda-discovery/src/: address_book.rs  lib.rs  naive.rs  psi_hash.rs  random_walk.rs  test_utils.rs  tests.rs  traits.rs
p2panda-document/: Cargo.toml
p2panda-document/src/: lib.rs
p2panda-encryption/: Cargo.toml  README.md
p2panda-encryption/src/: key_manager.rs  key_registry.rs  lib.rs  ordering.rs  test_utils.rs
p2panda-engine/: Cargo.toml
p2panda-engine/examples/: engine.rs  sorter.rs
p2panda-engine/src/: boxed.rs  context.rs  decode.rs  engine.rs  extensions.rs  ingest.rs  layer.rs  lib.rs  macros.rs  operation.rs  queue.rs  router.rs  sorter.rs  stream.rs  test_utils.rs
p2panda-group/: Cargo.toml
p2panda-group/src/: cbor.rs  key_manager.rs  key_registry.rs  lib.rs  secret.rs  test_utils.rs
p2panda-net/: Cargo.toml  README.md
p2panda-net-next/: Cargo.toml
p2panda-net-next/examples/: chat.rs
p2panda-net-next/src/: addrs.rs  args.rs  cbor.rs  config.rs  defaults.rs  discovery.rs  discovery_dh.rs  discovery_hash.rs  events.rs  lib.rs  network.rs  protocols.rs  store.rs  test_utils.rs  timestamp.rs  topic_streams.rs  utils.rs  watchers.rs
p2panda-net-next/tests/: api.rs  ephemeral_stream.rs
p2panda-net/examples/: chat.rs  direct.rs
p2panda-net/src/: addrs.rs  bytes.rs  cbor.rs  codec.rs  config.rs  connection_manager.rs  event.rs  events.rs  handshake.rs  lib.rs  message.rs  network.rs  protocols.rs  sync_connection.rs  test_utils.rs  timestamp.rs  utils.rs  watchers.rs
p2panda-net/tests/: api.rs  e2e.rs  sync_swarm.rs
p2panda-node/: Cargo.toml
p2panda-node/src/: actor.rs  config.rs  lib.rs  node.rs
p2panda-rs/: .gitignore  Cargo.toml  README.md  cbindgen.toml
p2panda-rs/benches/: encode_decode.rs  graph.rs  graph_comparison.rs  operation_encoding.rs
p2panda-rs/benchmarks/: encode_decode.rs  graph.rs
p2panda-rs/examples/: create_operation.rs  identity.rs
p2panda-rs/src/: encoder.rs  error.rs  key_group.rs  key_pair.rs  keypair.rs  lib.rs  test_helpers.rs  wasm.rs
p2panda-rs/tests/: mod.rs  wasm.rs
p2panda-spaces/: Cargo.toml  README.md
p2panda-spaces/src/: README.md  args.rs  config.rs  credentials.rs  dgm.rs  event.rs  forge.rs  group.rs  identity.rs  key_manager.rs  key_registry.rs  lib.rs  manager.rs  member.rs  message.rs  orderer.rs  playground.rs  space.rs  store.rs  test_utils.rs  tests.rs  traits.rs  types.rs  utils.rs
p2panda-store/: Cargo.toml  README.md
p2panda-store-next/: Cargo.toml
p2panda-store-next/migrations/: 20250928132835_create_operations.sql  20250928132846_create_ordering.sql
p2panda-store-next/src/: lib.rs  macros.rs  memory.rs  sqlite.rs  test_utils.rs
p2panda-store/migrations/: 20250125065817_create-operations.sql  20250928132835_create_operations.sql  20260217222329_create_topics.sql  20260218092319_create_address_book.sql  20260325101801_create_cursors.sql  20260327075331_create_groups.sql  20260515072908_rename_public_key_to_verifying_key.sql  20260611111900_create_key_secrets.sql  20260611141037_create_key_registry_v1.sql  20260611141037_create_key_registy_v1.sql  20260616100207_create_spaces.sql  20260625082007_create_processor.sql
p2panda-store/src/: lib.rs  macros.rs  memory.rs  memory_store.rs  operations.rs  sqlite.rs  sqlite_store.rs  traits.rs  transactions.rs
p2panda-stream/: Cargo.toml  README.md
p2panda-stream-next/: Cargo.toml
p2panda-stream-next/src/: layer.rs  lib.rs  orderer.rs  test_utils.rs  utils.rs
p2panda-stream/src/: lib.rs  macros.rs  operation.rs  orderer.rs  test_utils.rs
p2panda-sync/: Cargo.toml  README.md
p2panda-sync-next/: Cargo.toml
p2panda-sync-next/src/: cbor.rs  dedup.rs  lib.rs  log_sync.rs  manager.rs  session_topic_map.rs  test_utils.rs  topic_handshake.rs  topic_log_sync.rs  topic_log_sync_session.rs  traits.rs
p2panda-sync/src/: cbor.rs  codec.rs  dedup.rs  engine.rs  lib.rs  log_sync.rs  log_sync_new.rs  manager.rs  map.rs  protocol.rs  protocols.rs  session_topic_map.rs  test_protocols.rs  test_utils.rs  topic_handshake.rs  traits.rs
p2panda-tests/: Cargo.toml  README.md
p2panda-tests/src/: client.rs  data.rs  fixtures.rs  generate_test_data.rs  lib.rs  logs.rs  main.rs  shell.rs  templates.rs  testing.rs  tests.rs  utils.rs
p2panda/examples/: chat.rs  todo.rs
p2panda/src/: builder.rs  credentials.rs  forge.rs  lib.rs  network.rs  node.rs  offset.rs  operation.rs  test_utils.rs  topic.rs
p2panda/tests/: api.rs  spaces.rs
(+1327 files in other folders)
