[workspace]
resolver = "2"
members = [
    "fuzz",
    "p2panda-auth",
    "p2panda-core",
    "p2panda-discovery-next",
    "p2panda-encryption",
    "p2panda-net-next",
    "p2panda-spaces",
    "p2panda-store",
    "p2panda-stream",
    "p2panda-sync-next",
]

[workspace.lints.rust]

# TODO: https://github.com/n0-computer/iroh/issues/3241
[patch.crates-io]
iroh = { git = "https://github.com/n0-computer/iroh", rev = "e0fcf7dba99a96566523756be08508390965cda3" }
iroh-base = { git = "https://github.com/n0-computer/iroh", rev = "e0fcf7dba99a96566523756be08508390965cda3" }
iroh-quinn = { git = "https://github.com/n0-computer/quinn", rev = "43a7a7c089088472298380d97497043a2967dee3" }
iroh-quinn-proto = { git = "https://github.com/n0-computer/quinn", rev = "43a7a7c089088472298380d97497043a2967dee3" }
iroh-quinn-udp = { git = "https://github.com/n0-computer/quinn", rev = "43a7a7c089088472298380d97497043a2967dee3" }

netwatch = { git = "https://github.com/n0-computer/net-tools", rev = "9af33c3ae16ae96e7b1b56289e783e3329b408dc" }
