[package]
name = "p2panda-blobs"
version = "0.4.0"
edition = "2024"
authors = [
  "adz <x12@adz.garden>",
  "sandreae <contact@samandreae.com>",
  "glyph <glyph@mycelial.technology>",
]
description = "Blob storage, retrieval and synchronisation"
repository = "https://github.com/p2panda/p2panda"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["storage", "streaming", "blobs", "bao", "blake3"]

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true

[dependencies]
anyhow = "1.0.97"
async-channel = "2.3.1"
bytes = "1.10.1"
futures-buffered = "0.2.11"
futures-lite = "2.6.0"
futures-util = "0.3.31"
iroh = { version = "0.34.1", default-features = false }
iroh-base = "0.34.1"
iroh-blobs = { version = "0.34.1", features = ["downloader", "fs-store"], default-features = false }
iroh-io = "0.6.1"
p2panda-core = { path = "../p2panda-core", version = "0.4.0" }
p2panda-net = { path = "../p2panda-net", version = "0.4.0" }
p2panda-sync = { path = "../p2panda-sync", version = "0.4.0" }
serde = { version = "1.0.219", features = ["derive"] }
serde-error = "0.1.3"
tokio = { version = "1.44.2", features = ["fs"] }
tracing = "0.1.41"
