[package]
name = "p2panda-blobs"
version = "0.4.0"
edition = "2024"
authors = [
  "adz <x12@adz.garden>",
  "sandreae <contact@samandreae.com>",
  "glyph <glyph@mycelial.technology>",
]
description = "Blob storage, retrieval and synchronisation"
repository = "https://github.com/p2panda/p2panda"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["storage", "streaming", "blobs", "bao", "blake3"]

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true
