[package]
name = "p2panda-client"
version = "0.4.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
futures-core = { version = "0.3.31", default-features = false }
futures-util = { version = "0.3.31", features = ["sink"], default-features = false }
p2panda-core = { path = "../p2panda-core", version = "0.4.0" }
p2panda-stream = { path = "../p2panda-stream", version = "0.4.0" }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"

[lints]
workspace = true

[dev-dependencies]
tokio = { version = "1.47.1", features = ["macros", "rt"] }
