[package]
name = "p2panda-client"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[features]
test_utils = ["dep:anyhow", "dep:tokio-stream"]

[dependencies]
anyhow = { version = "1.0.99", optional = true }
futures-core = { version = "0.3.31", default-features = false }
futures-util = { version = "0.3.31", features = ["sink"], default-features = false }
p2panda-core = { path = "../p2panda-core", version = "0.4.0", default-features = false }
p2panda-net = { path = "../p2panda-net", version = "0.4.0", default-features = false }
p2panda-sync = { path = "../p2panda-sync", version = "0.4.0", default-features = false }
serde = { version = "1.0.224", features = ["derive"] }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["sync"] }
tokio-stream = { version = "0.1", optional = true }

[dev-dependencies]
anyhow = "1.0.99"
tokio = { version = "1.47.1", features = ["macros", "rt"] }
tokio-stream = "0.1"
