[package]
name = "p2panda-core"
version = "0.4.0"
edition = "2024"
authors = [
  "adz <x12@adz.garden>",
  "sandreae <contact@samandreae.com>",
  "glyph <glyph@mycelial.technology>",
]
description = "Extensible data-types for secure, distributed and efficient exchange of data"
repository = "https://github.com/p2panda/p2panda"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["p2p", "data-types", "blake3", "cbor", "ed25519"]

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true

[features]
default = ["prune"]
prune = []

[dependencies]
arbitrary = { version = "1.4.1", optional = true, features = ["derive"] }
blake3 = "1.8.1"
ciborium = "0.2.2"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
hex = { version = "0.4.3", features = ["serde"] }
rand = "0.8.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_bytes = { version = "0.11.17" }
thiserror = "2.0.12"

[dev-dependencies]
serde_json = "1.0.140"
