[package]
name = "p2panda-derive"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
p2panda-core = { path = "../p2panda-core", default-features = false }
p2panda-net = { path = "../p2panda-net", default-features = false }
p2panda-sync = { path = "../p2panda-sync", default-features = false }
quote = "1.0.37"
syn = "2.0.89"

[dev-dependencies]
serde = { version = "1.0.215", features = ["derive"] }
