[package]
name = "p2panda-discovery-next"
version = "0.4.0"
edition = "2024"

[lints]
workspace = true

[features]
default = ["address_book"]
address_book = [
  "dep:rand",
  "dep:rand_chacha",
  "dep:thiserror",
  "dep:tokio",
]

[dependencies]
rand = { version = "0.9.0", optional = true }
rand_chacha = { version = "0.9.0", optional = true }
thiserror = { version = "2.0.17", optional = true }
tokio = { version = "1.48.0", features = ["sync"], optional = true }

[dev-dependencies]
tokio = { version = "1.48.0", features = ["sync", "macros", "rt"] }
