[package]
name = "p2panda-discovery-next"
version = "0.4.0"
edition = "2024"

[lints]
workspace = true

[features]
default = ["random_walk"]
random_walk = [
  "dep:rand",
  "dep:thiserror",
]
test_utils = [
  "dep:rand",
  "dep:rand_chacha",
  "dep:thiserror",
]

[dependencies]
rand = { version = "0.9.0", optional = true }
rand_chacha = { version = "0.9.0", optional = true }
thiserror = { version = "2.0.17", optional = true }
tokio = { version = "1.48.0", features = ["sync"] }

[dev-dependencies]
rand = "0.9.0"
rand_chacha = "0.9.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt"] }
