[package]
name = "p2panda-discovery-next"
version = "0.4.0"
edition = "2024"

[lints]
workspace = true

[features]
default = ["random_walk"]
random_walk = [
  "dep:rand",
  "dep:thiserror",
]
test_utils = [
  "dep:rand",
  "dep:rand_chacha",
  "dep:serde",
  "dep:thiserror",
  "dep:tokio",
]

[dependencies]
futures-util = { version = "0.3.31", features = ["sink"], default-features = false }
rand = { version = "0.9.0", optional = true }
rand_chacha = { version = "0.9.0", optional = true }
serde = { version = "1.0.228", features = ["derive"], optional = true }
thiserror = { version = "2.0.17", optional = true }
tokio = { version = "1.48.0", features = ["sync"], optional = true, default-features = false }

[dev-dependencies]
futures-channel = "0.3.31"
rand = "0.9.0"
rand_chacha = "0.9.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["macros", "rt", "sync"] }
