[package]
name = "p2panda-discovery"
version = "0.5.1"
edition = "2024"
authors = [
  "adz <x12@adz.garden>",
  "jackaperkins <jackaperkins@posteo.net>",
]
description = "Confidential topic and node discovery protocol"
repository = "https://github.com/p2panda/p2panda"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["p2p", "discovery", "confidential"]

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true

[features]
default = ["random_walk"]
random_walk = [
  "dep:rand",
  "dep:thiserror",
  "dep:tokio",
]
test_utils = [
  "dep:rand",
  "dep:rand_chacha",
  "dep:thiserror",
]

[dependencies]
blake3 = "1.8.2"
futures-util = { version = "0.3.31", features = ["sink"], default-features = false }
rand = { version = "0.9.0", optional = true }
rand_chacha = { version = "0.9.0", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = { version = "2.0.17", optional = true }
tokio = { version = "1.48.0", features = ["sync"], optional = true, default-features = false }

[dev-dependencies]
futures-channel = { version = "0.3.31", features = ["sink"] }
rand = "0.9.0"
rand_chacha = "0.9.0"
tokio = { version = "1.48.0", features = ["macros", "rt", "sync"] }
