[package]
name = "p2panda-discovery"
version = "0.6.0"
edition = "2024"
authors = [
  "adz <x12@adz.garden>",
  "jackaperkins <jackaperkins@posteo.net>",
]
description = "Confidential topic and node discovery protocol"
repository = "https://github.com/p2panda/p2panda"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["p2p", "discovery", "confidential"]

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true

[features]
default = ["random_walk"]
random_walk = [
  "dep:tokio",
]
test_utils = [
  "dep:rand_chacha",
  "p2panda-store/test_utils",
]

[dependencies]
blake3 = "1.8.2"
futures-util = { workspace = true, features = ["sink"] }
p2panda-core = { workspace = true }
p2panda-store = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"], optional = true }

[dev-dependencies]
futures-channel = { version = "0.3.31", features = ["sink"] }
p2panda-discovery = { path = ".", features = ["test_utils"] }
p2panda-store = { workspace = true, features = ["test_utils", "sqlite", "macros"] }
tokio = { workspace = true, features = ["macros", "rt", "sync"] }
