[package]
name = "p2panda-document"
version = "0.1.0"
edition = "2024"

[dependencies]
p2panda-auth = { path = "../p2panda-auth", version = "0.1.0" }
p2panda-core = { path = "../p2panda-core", version = "0.3.1" }
p2panda-encryption = { path = "../p2panda-encryption", version = "0.1.0" }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"

[lints]
workspace = true
