[package]
name = "p2panda-document"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
# We require test_utils here to allow cloning when inserting the group state in
# `GroupStore`. Later this should not be required, as "insert" gets removed.
p2panda-auth = { path = "../p2panda-auth", version = "0.1.0", features = ["test-utils"] }
p2panda-core = { path = "../p2panda-core", version = "0.3.1" }
p2panda-encryption = { path = "../p2panda-encryption", version = "0.1.0" }
p2panda-stream = { path = "../p2panda-stream", version = "0.3.1" }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["rt", "sync"] }

[dev-dependencies]
tokio = { version = "1.45.0", features = ["rt", "sync", "macros"] }
