[package]
name = "p2panda-encryption"
version = "0.4.0"
edition = "2024"
authors = [
  "adz <x12@adz.garden>",
  "sandreae <contact@samandreae.com>",
  "glyph <glyph@mycelial.technology>",
]
description = "Decentralised data- and message encryption for groups with post-compromise security and optional forward secrecy"
repository = "https://github.com/p2panda/p2panda"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["p2p", "encryption", "groups", "double-ratchet"]

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true

[features]
default = ["data_scheme"]
data_scheme = []
message_scheme = []
test_utils = ["data_scheme", "message_scheme"]

[dependencies]
chacha20poly1305 = { version = "0.10.1", features = ["alloc"], default-features = false }
curve25519-dalek = "4.1.3"
hex = "0.4.3"
hkdf = "0.12.4"
hpke-rs = "0.2.0"
hpke-rs-crypto = "0.2.0"
hpke-rs-rust-crypto = "0.2.0"
p2panda-core = { version = "0.4.0", path = "../p2panda-core", default-features = false }
rand_chacha = { version = "0.9.0", features = ["os_rng"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_bytes = "0.11.17"
sha2 = "0.10.8"
subtle = "2.6.1"
thiserror = "2.0.12"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
zeroize = { version = "1.8.1", features = ["derive"] }
