[package]
name = "p2panda-engine"
version = "0.1.0"
edition = "2021"

[features]
default = ["stream"]
stream = [
  "dep:futures-channel",
  "dep:futures-util",
  "dep:pin-project",
  "dep:pin-utils",
]

[dependencies]
futures-channel = { version = "0.3.30", optional = true }
futures-util = { version = "0.3.30", features = ["sink"], optional = true }
p2panda-core = { path = "../p2panda-core" }
p2panda-store = { path = "../p2panda-store" }
pin-project = { version = "1.1.5", optional = true }
pin-utils = { version = "0.1.0", optional = true }
serde = { version = "1.0.210", features = ["derive"] }
thiserror = "1.0.63"

[dev-dependencies]
async-stream = "0.3.5"
futures-util = { version = "0.3.30", features = ["sink"] }
tokio = { version = "1.40.0", features = ["rt", "macros"] }

[lints]
workspace = true
