[package]
name = "p2panda-group"
version = "0.1.0"
edition = "2024"
authors = [
  "adz <x12@adz.garden>",
]
repository = "https://github.com/p2panda/p2panda"
license = "MIT OR Apache-2.0"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true

[features]
default = ["crypto"]
crypto = [
  "dep:chacha20poly1305",
  "dep:curve25519-dalek",
  "dep:libcrux",
  "dep:libcrux-chacha20poly1305",
  "dep:libcrux-ecdh",
  "dep:libcrux-ed25519",
  "dep:libcrux-hkdf",
  "dep:libcrux-sha2",
  "dep:libcrux-traits",
  "dep:rand_chacha",
]

[dependencies]
# TODO: Replace this with `libcrux-chacha20poly1305` as soon as it contains an
# XChaCha20-Poly1305 implementation.
chacha20poly1305 = { version = "0.10.1", optional = true }
curve25519-dalek = { version = "4.1.3", optional = true }
hex = "0.4.3"
# TODO: Replace this with `libcrux-hpke` as soon as it's released.
libcrux = { git = "https://github.com/cryspen/libcrux", rev = "cf292a2829172cf9b36390f2f05f7a32b2304888", optional = true }
libcrux-chacha20poly1305 = { version = "0.0.2-beta.3", optional = true }
libcrux-ecdh = { version = "0.0.2-beta.3", optional = true }
libcrux-ed25519 = { version = "0.0.2-beta.3", optional = true }
libcrux-hkdf = { version = "0.0.2-beta.3", optional = true }
libcrux-sha2 = { version = "0.0.2-beta.3", optional = true }
libcrux-traits = { version = "0.0.2-beta.3", optional = true }
# TODO: Find out if we can use libcrux's DRBG instead.
rand_chacha = { version = "0.9.0", features = ["os_rng"], optional = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_bytes = "0.11.17"
subtle = "2.6.1"
thiserror = "2.0.12"
zeroize = { version = "1.8.1", features = ["derive"] }
