[package]
name = "p2panda-group"
version = "0.1.0"
edition = "2024"
authors = [
  "adz <x12@adz.garden>",
]
repository = "https://github.com/p2panda/p2panda"
license = "MIT OR Apache-2.0"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true

[dependencies]
chacha20poly1305 = { version = "0.10.1", features = ["alloc"], default-features = false }
curve25519-dalek = "4.1.3"
ed25519-dalek = "2.1.1"
hex = "0.4.3"
hkdf = "0.12.4"
hpke-rs = "0.2.0"
hpke-rs-crypto = "0.2.0"
hpke-rs-rust-crypto = "0.2.0"
p2panda-core = { version = "0.3.0", path = "../p2panda-core", default-features = false }
rand_chacha = { version = "0.9.0", features = ["os_rng"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_bytes = "0.11.17"
sha2 = "0.10.8"
subtle = "2.6.1"
thiserror = "2.0.12"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
zeroize = { version = "1.8.1", features = ["derive"] }
