[package]
name = "p2panda-net-next"
version = "0.4.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
ciborium = "0.2.2"
futures-channel = "0.3.31"
futures-util = "0.3.31"
hex = "0.4.3"
iroh = { version = "0.95.1", default-features = false }
iroh-base = "0.95.1"
iroh-gossip = "0.95"
p2panda-core = { path = "../p2panda-core", version = "0.4.0" }
p2panda-discovery = { path = "../p2panda-discovery-next", package = "p2panda-discovery-next", version = "0.4.0", features = ["test_utils"] }
p2panda-sync = { path = "../p2panda-sync-next", package = "p2panda-sync-next", version = "0.4.0" }
ractor = "0.15.8"
rand = "0.9.2"
rand_chacha = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["rt", "sync"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tokio-util = { version = "0.7.16", features = ["codec", "compat"] }
tracing = "0.1.41"

[dev-dependencies]
tokio = { version = "1.47.1", features = ["rt", "sync", "time"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
