[package]
name = "p2panda-net-next"
version = "0.4.0"
edition = "2024"

[lints]
workspace = true

[features]
default = [
  "address_book",
  "iroh_endpoint",
  "iroh_mdns",
  "confidential_discovery",
  "gossip",
  "log_sync",
]
address_book = [
  "dep:p2panda-store",
]
iroh_endpoint = [
  "address_book",
  "dep:iroh",
  "dep:iroh-base",
]
iroh_mdns = [
  "iroh_endpoint",
  "iroh/discovery-local-network",
]
confidential_discovery = [
  "address_book",
  "iroh_endpoint",
  "dep:p2panda-discovery",
]
gossip = [
  "address_book",
  "iroh_endpoint",
  "dep:iroh-gossip",
]
log_sync = [
  "address_book",
  "iroh_endpoint",
  "gossip",
  "dep:p2panda-store",
  "dep:p2panda-sync",
]
test_utils = [
  "dep:tracing-subscriber",
]

[dependencies]
ciborium = "0.2.2"
futures-channel = "0.3.31"
futures-util = "0.3.31"
hex = "0.4.3"
iroh = { version = "0.95.1", default-features = false, optional = true }
iroh-base = { version = "0.95.1", optional = true }
# TODO: Temporary fix. See related issue: https://github.com/n0-computer/iroh-gossip/pull/117
iroh-gossip = { git = "https://github.com/p2panda/iroh-gossip", rev = "6fad0f740c031876dbb412c7b8237776314d763e", optional = true }
p2panda-core = { path = "../p2panda-core", version = "0.4.0" }
p2panda-discovery = { path = "../p2panda-discovery-next", package = "p2panda-discovery-next", version = "0.4.0", features = ["test_utils"], optional = true }
p2panda-store = { path = "../p2panda-store", package = "p2panda-store", version = "0.4.0", optional = true }
p2panda-sync = { path = "../p2panda-sync-next", package = "p2panda-sync-next", version = "0.4.0", optional = true }
ractor = "0.15.8"
rand = "0.9.2"
rand_chacha = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["rt", "sync"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tokio-util = { version = "0.7.16", features = ["codec", "compat"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"], optional = true }

[dev-dependencies]
assert_matches = "1.5.0"
mock_instant = "0.6.0"
p2panda-net-next = { path = ".", features = ["test_utils"] }
tokio = { version = "1.47.1", features = ["rt", "sync", "time"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
