[package]
name = "p2panda-net"
version = "0.4.0"
edition = "2024"
authors = [
  "adz <x12@adz.garden>",
  "sandreae <contact@samandreae.com>",
  "glyph <glyph@mycelial.technology>",
]
description = "Data-type-agnostic peer-to-peer networking"
repository = "https://github.com/p2panda/p2panda"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["p2p", "networking", "gossip", "sync"]

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true

[features]
default = ["mdns-discovery"]
log-sync = []
mdns-discovery = ["p2panda-discovery/mdns"]

[dependencies]
anyhow = "1.0.97"
async-trait = "0.1.88"
ciborium = "0.2.2"
futures-lite = "2.6.0"
futures-util = "0.3.31"
iroh = { version = "0.34.1", default-features = false }
iroh-base = "0.34.1"
iroh-gossip = "0.34.1"
iroh-quinn = { version = "0.13.0", features = ["futures-io"] }
netwatch = "0.4.0"
p2panda-core = { path = "../p2panda-core", version = "0.4.0" }
p2panda-discovery = { path = "../p2panda-discovery", version = "0.4.0" }
p2panda-sync = { path = "../p2panda-sync", version = "0.4.0", features = ["log-sync"] }
rand = "0.8.5"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["rt", "sync", "time"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tokio-util = { version = "0.7.14", features = ["compat", "codec", "io-util", "io"] }
tracing = "0.1.41"

[dev-dependencies]
clap = { version = "4.5.35", features = ["derive"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
p2panda-sync = { path = "../p2panda-sync", version = "0.4.0", features = ["log-sync", "test-protocols"] }
p2panda-store = { path = "../p2panda-store", version = "0.4.0" }
